# TempSensor

./: README.md
STM32/: CMakeLists.txt
STM32/Inc/: STM32_DHT12.h  STM32_ESP8266.h  STM32_LCD1602.h  STM32_LCD1602_8.h  STM32_LCD1602_PCF8574T.h  STM32_PMS7003.h  common.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
STM32/MDK-ARM/: Project.uvguix.tangyq  Project.uvoptx  Project.uvprojx  startup_stm32l476xx.lst  startup_stm32l476xx.s
STM32/MDK-ARM/STM32L476RG_NUCLEO/: .gitkeep  Project_STM32L476RG_NUCLEO.dep  STM32L476RG_NUCLEO.axf  STM32L476RG_NUCLEO.build_log.htm  STM32L476RG_NUCLEO.htm  STM32L476RG_NUCLEO.lnp  STM32L476RG_NUCLEO.map  common.crf  common.d  main.crf  main.d  stm32_dht12.crf  stm32_dht12.d  stm32_esp8266.crf  stm32_esp8266.d  stm32_lcd1602.crf  stm32_lcd1602.d  stm32_lcd1602_8.crf  stm32_lcd1602_8.d  stm32_lcd1602_pcf8574t.crf  stm32_lcd1602_pcf8574t.d  stm32_pms7003.crf  stm32_pms7003.d  stm32l4xx_hal.crf  stm32l4xx_hal.d  stm32l4xx_hal_cortex.crf  stm32l4xx_hal_cortex.d  stm32l4xx_hal_dma.crf  stm32l4xx_hal_dma.d  (+26 more)
STM32/Src/: STM32_DHT12.c  STM32_ESP8266.c  STM32_LCD1602.c  STM32_LCD1602_8.c  STM32_LCD1602_PCF8574T.c  STM32_PMS7003.c  common.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
TMS320/: .ccsproject  .cproject  .gitignore  .project  CMakeLists.txt  F28377_ATGM336H_UART.c  F28377_ATGM336H_UART.h  F28377_Common.c  F28377_Common.h  F28377_ESP8266_UART.c  F28377_ESP8266_UART.h  F28377_Keyboard.c  F28377_Keyboard.h  F28377_LCD12864.c  F28377_LCD12864.h  F28377_PM25Sensor.c  F28377_PM25Sensor.h  F28377_PM25_10_UART.c  F28377_PM25_10_UART.h  F28377_TempSensor.c  F28377_TempSensor.h  main.c  nmea0183.c  nmea0183.h
(+31 files in other folders)
